# env-sanity

./: .gitignore  README.md
blas/: CMakeLists.txt  README.md
blas/src/: saxpy.cpp  saxpy.f90
boost/: CMakeLists.txt  README.md
boost/src/: foreach.cpp  po.cpp
cantera/: CMakeLists.txt  README.md  build.sh
cantera/install/: build.sh
cantera/install/cmake/Cantera/: CanteraConfig.cmake
cantera/src/: main.cpp
gtest/: CMakeLists.txt  foo.cpp
metis/: CMakeLists.txt  README.md
metis/install/: METISConfig.cmake  README.md  build.sh
metis/src/: graph.cpp
mpi/: CMakeLists.txt  main.cpp
